[Pankaj Pandey]refactor.refactored all services and add configurations