@@ -6,7 +6,6 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <!-- Spring Boot Parent -->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -14,7 +13,6 @@
         <relativePath/>
     </parent>
 
-    <!-- Project Info -->
     <groupId>com.edulearn</groupId>
     <artifactId>edulearn</artifactId>
     <version>1.0.0-SNAPSHOT</version>
@@ -22,7 +20,6 @@
 
     <name>EduLearn Backend</name>
 
-    <!-- Modules -->
     <modules>
         <module>auth-service</module>
         <module>course-service</module>
@@ -36,10 +33,21 @@
         <module>api-gateway</module>
     </modules>
 
-    <!-- Common Properties -->
     <properties>
         <java.version>21</java.version>
         <jjwt.version>0.12.5</jjwt.version>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
